--- a/task2/assets/css/style.css
+++ b/task2/assets/css/style.css
@@ -38,6 +38,10 @@ padding-top: 20px !important;
 padding-bottom: 20px !important;
 }
 
+.line17{
+	line-height: 1.7;
+}
+
 .backgroundImg{
 	background-image: url(../images/background.jpg);
 	background-repeat: no-repeat;
@@ -68,6 +72,9 @@ padding-bottom: 20px !important;
 	padding-top: 44px;
 }
 
+.noPaddingBottom{
+	padding-bottom: 0 !important;
+}
 
 
 .leftBox{
@@ -95,11 +102,12 @@ padding-bottom: 20px !important;
 
 .col-lg-3 img{
 	vertical-align: super;
-	margin-right: 48px;
+
 }
 
 .clientpic{
 	max-height: 320px;
+		margin-right: 48px;
 }
 
 .mt-40{
@@ -138,6 +146,27 @@ font-family: 'Montserrat', sans-serif !important;
 
 .textBig{
 	font-size: 22px;
+}
+
+.author{
+	margin-top: 35px;
+}
+
+.grid-container{
+	padding-top: 90px;
+	padding-bottom: 90px;
+	padding-right: 114px;
+	padding-left: 114px;
+}
+
+.testimoni{
+	padding-top: 180px;
+	padding-bottom: 57px;
+}
+
+.clientLogo{
+	padding-top: 65px;
+	padding-bottom: 65px;
 }
 
 /* Sweep To Bottom */
@@ -179,4 +208,61 @@ font-family: 'Montserrat', sans-serif !important;
 .hvr-sweep-to-bottom:hover:before, .hvr-sweep-to-bottom:focus:before, .hvr-sweep-to-bottom:active:before {
   -webkit-transform: scaleY(1);
   transform: scaleY(1);
+}
+
+/*-------------------------------*/
+/*      Code snippet by          */
+/*      @maridlcrmn              */
+/*-------------------------------*/
+
+
+section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.quote {
+    color: rgba(0,0,0,.1);
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+/*-------------------------------*/
+/*    Carousel Fade Transition   */
+/*-------------------------------*/
+
+#fade-quote-carousel.carousel {
+  padding-bottom: 60px;
+}
+#fade-quote-carousel.carousel .carousel-inner .item {
+  opacity: 0;
+  -webkit-transition-property: opacity;
+      -ms-transition-property: opacity;
+          transition-property: opacity;
+          padding-bottom: 100px;
+}
+#fade-quote-carousel.carousel .carousel-inner .active {
+  opacity: 1;
+  -webkit-transition-property: opacity;
+      -ms-transition-property: opacity;
+          transition-property: opacity;
+}
+#fade-quote-carousel.carousel .carousel-indicators {
+  bottom: 10px;
+  margin-top: 100px;
+}
+#fade-quote-carousel.carousel .carousel-indicators > li {
+  background-color: white;
+  border: none;
+  margin-top: 100px;
+}
+#fade-quote-carousel blockquote {
+    text-align: center;
+    border: none;
+}
+#fade-quote-carousel .profile-circle {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    border-radius: 100px;
 }
