--- a/task2/assets/css/style.css
+++ b/task2/assets/css/style.css
@@ -42,6 +42,10 @@ padding-bottom: 20px !important;
 	line-height: 1.7;
 }
 
+.headerText{
+	font-size: 	30px;
+}
+
 .backgroundImg{
 	background-image: url(../images/background.jpg);
 	background-repeat: no-repeat;
@@ -96,9 +100,41 @@ padding-bottom: 20px !important;
 	padding-right: 45px !important;
 }
 
+.eyefocus:hover {
+  cursor: 	pointer;	
+
+}
+
+.noRight{
+	padding-right: 0 !important; 	
+}
+
+.eyefoucs img:hover {
+    cursor: pointer;
+    opacity: 0.2;
+}
+
+.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover {
+    color: #10c9c3 !important;
+    background-color: transparent;
+}
+
+
 .TealBack{
 	background-color: #10c9c3;
 }
+
+.BlackBack{
+	background-color: black;
+}
+
+.footer{
+	padding-left: 	98px;
+	padding-right: 	135px;
+	padding-top: 	100px;
+	padding-bottom: 	100px;
+}
+
 
 .col-lg-3 img{
 	vertical-align: super;
@@ -140,6 +176,12 @@ font-family: 'Montserrat', sans-serif !important;
 	font-family: 'Nunito Sans', sans-serif !important; 
 }
 
+.nunito-med{
+	font-family: 'Nunito Sans', sans-serif !important;
+	font-size: 	16px; 
+}
+
+
 .caption{
 	font-size: 18px;
 }
@@ -167,6 +209,40 @@ font-family: 'Montserrat', sans-serif !important;
 .clientLogo{
 	padding-top: 65px;
 	padding-bottom: 65px;
+}
+
+.form{
+	background-color: #f5f5f5;
+	padding-top: 105px;
+	padding-bottom: 105px;
+}
+
+form{
+	padding-left: 	360px;
+	padding-right: 	348px;
+}
+
+.formEmail{
+	padding-right: 	0!important	;
+	margin-right: 	30px; 
+}
+
+.height48{
+	height: 	48px !important;
+}
+
+.col-md-6{
+	padding-left: 	0 !important	;
+
+}
+
+.form-group{
+	margin-bottom: 	30px !important;
+}
+
+.form-input{
+	margin-top: 	41px;
+	margin-bottom: 	30px;
 }
 
 /* Sweep To Bottom */
