--- a/janken/css/style.css
+++ b/janken/css/style.css
@@ -1,6 +1,5 @@
 body {
         width: 100%;
-        height: 100vh;
         background-image: url(../img/bg.jpg);
         background-size: contain;
         background-repeat: round;
@@ -155,6 +154,10 @@ h1 img {
 /* MOBILE */
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
+        body{
+                background-repeat: unset;
+        }
+
         h1 {
                 margin-bottom: 4em;
                 margin-top: 4em;
@@ -188,9 +191,8 @@ h1 img {
 
         .score {
                 top: unset;
-                width: 46vw;
                 bottom: 1em;
-                width: 46vw;
+                width: 12em;
         }
 
         .score-result {
