--- a/famili-100/css/style.css
+++ b/famili-100/css/style.css
@@ -137,10 +137,19 @@ table td {
     font-size: 1.8em;
 }
 
+.zoom-out{
+    margin-top: -3em;
+    transform: scale(0.8);
+}
+
 /* SP */
 @media only screen and (max-width: 768px) {
     .sp-none{
         display: none;
+    }
+    
+    .main-content{
+        height: 100vh;
     }
 
 }
