--- a/famili-100/css/style.css
+++ b/famili-100/css/style.css
@@ -159,8 +159,12 @@ table td {
 
 /* SP */
 @media only screen and (max-width: 768px) {
+    html{
+        height: -webkit-fill-available;
+    }
+
     body{
-        height: webkit-fill-available;
+        min-height: -webkit-fill-available;
     }
     
     .sp-none {
