--- a/famili-100/css/style.css
+++ b/famili-100/css/style.css
@@ -205,7 +205,11 @@ table td {
         transform: scale(0.8);
     }
     
-    .sp-answer:not(:last-child){
+    .sp-answer{
+        border: 2px solid white;
+    }
+    
+    .sp-answer div:not(:last-child){
         border-right: 2px solid white !important;
     }
 }
