--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -30,10 +30,14 @@
       </div>
       <ul class="nav-icons row">
         <li id="cart" class="col-lg-4 col-6">
-          <a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a>
+          <a href="javaScript:void(0)"><i class="fa fa-shopping-cart">
+              <p class="notif"><span class="counter">4</span></p>
+            </i></a>
         </li>
         <li id="wishlist" class="col-lg-4 col-6">
-          <a href="javaScript:void(0)"><i class="fa fa-heart"></i></a>
+          <a href="javaScript:void(0)"><i class="fa fa-heart">
+              <p class="notif"><span class="counter">2</span></p>
+            </i></a>
         </li>
         <li id="login" class="col-lg-4 sp-none">
           <a href="modal.html" data-toggle="modal" data-target="#loginModal"><i class="fa fa-user"></i></a>
