--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -43,6 +43,32 @@
           <a href="modal.html" data-toggle="modal" data-target="#loginModal"><i class="fa fa-user"></i></a>
         </li>
       </ul>
+      
+      <div class="productCart hide">
+        <div class="overlay"></div>
+        <div class="top">
+          <button id="closeButton">
+            <i class="fas fa-times-circle"></i>
+          </button>
+          <h3>Cart</h3>
+        </div>
+        <ul id="buyItems">
+          <h4 class="empty">Your shopping cart is empty</h4>
+          <!-- <li class="buyItem">
+    <img src="Images/producs-images/Mobiles/galaxynote10.png">
+    <div>
+      <h5>Products Name</h5>
+      <h6>$199</h6>
+      <div>
+        <button>-</button>
+        <span class="countOfProduct">1</span>
+        <button>+</button>
+      </div>
+    </div>
+  </li> -->
+        </ul>
+        <button class="btn checkout hidden">Check out</button>
+      </div>
     </div>
   </nav>
 </div>
