--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -205,6 +205,12 @@ figcaption {
   padding-top: 2em;
 }
 
+.productCart h3 {
+  font-family: 'Anton', sans-serif;
+  font-style: bold;
+  color: #000;
+}
+
 h4 {
   font-family: 'Anton', sans-serif;
   font-style: bold;
