--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -72,3 +72,25 @@
     </div>
   </nav>
 </div>
+
+
+<script>
+  const openShopCart = document.querySelector('#cart a');
+  openShopCart.addEventListener('click', () => {
+    const cart = document.querySelector('.productCart');
+    cart.classList.toggle('hide');
+    document.querySelector('body').classList.toggle('stopScrolling');
+  });
+  
+  const closeShopCart = document.querySelector('#closeButton');
+  const overlay = document.querySelector('.overlay');
+  closeShopCart.addEventListener('click', closeCart);
+  overlay.addEventListener('click', closeCart);
+  
+  function closeCart() {
+  const cart = document.querySelector('.productCart');
+  cart.classList.toggle('hide');
+  document.querySelector('body').classList.toggle('stopScrolling')
+}
+
+</script>
