--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -43,14 +43,14 @@
           <a href="modal.html" data-toggle="modal" data-target="#loginModal"><i class="fa fa-user"></i></a>
         </li>
       </ul>
-      
+
       <div class="productCart hide">
         <div class="overlay"></div>
         <div class="top">
           <button id="closeButton">
             <i class="fas fa-times-circle"></i>
           </button>
-          <h3>Cart</h3>
+          <h3>Shooping Cart</h3>
         </div>
         <ul id="buyItems">
           <h4 class="empty">Your shopping cart is empty</h4>
