--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -50,7 +50,7 @@
           <button id="closeButton">
             <i class="fas fa-times-circle"></i>
           </button>
-          <h3>Shooping Cart</h3>
+          <h3>Shopping Cart</h3>
         </div>
         <ul id="buyItems">
           <h4 class="empty">Your shopping cart is empty</h4>
