--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -43,6 +43,53 @@ body {
   border: 0 !important;
 }
 
+.cat-content {
+  width: 70%;
+  position: relative;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
+}
+
+.cat-content .caption {
+  font-family: 'Anton', sans-serif;
+  position: absolute;
+  font-size: 2em;
+  color: white;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
+
+.cat-content img {
+  height: auto;
+  width: 100%;
+  border-radius: 5%;
+  max-height: 112px;
+}
+
+
+
+.myfilter {
+  position: relative;
+}
+
+.myfilter:after {
+  position: absolute;
+  content: '';
+  display: block;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(48, 61, 68, 0.98);
+  mix-blend-mode: multiply;
+  border-radius: 5%;
+}
+
 
 .nav-icons {
   list-style-type: none !important;
@@ -691,7 +738,8 @@ h3.h3 {
 
 .product-grid3 .pic-1 {
   opacity: 1;
-  transition: all .5s ease-out 0s
+  transition: all .5s ease-out 0s;
+  border-radius: 3%;
 }
 
 .product-grid3:hover .pic-1 {
@@ -703,7 +751,8 @@ h3.h3 {
   top: 0;
   left: 0;
   opacity: 0;
-  transition: all .5s ease-out 0s
+  transition: all .5s ease-out 0s;
+  border-radius: 3%;
 }
 
 .product-grid3:hover .pic-2 {
