--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -1,5 +1,5 @@
 <div id="header">
-  <nav id="logo" class="navbar navbar-expand-lg navbar-light">
+  <nav id="logo" class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand brand-black" href="#" style="font-family: 'Norican', cursive; font-size: 30px;">Jersey
         Store</a>
