--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -3,10 +3,6 @@
     <div class="container-fluid">
       <a class="navbar-brand brand-black" href="#" style="font-family: 'Norican', cursive; font-size: 30px;">Jersey
         Store</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -28,24 +24,29 @@
           </li>
         </ul>
       </div>
-      <ul class="nav-icons row">
-        <li id="cart" class="col-lg-4 col-6">
-          <a href="javaScript:void(0)"><i class="fa fa-shopping-cart">
-              <p class="notif"><span class="counter">4</span></p>
-            </i></a>
-        </li>
-        <li id="wishlist" class="col-lg-4 col-6">
-          <a href="javaScript:void(0)"><i class="fa fa-heart">
-              <p class="notif"><span class="counter">2</span></p>
-            </i></a>
-        </li>
-        <li id="login" class="col-lg-4 sp-none">
-          <a href="modal.html" data-toggle="modal" data-target="#loginModal"><i class="fa fa-user"></i></a>
-        </li>
-      </ul>
-
-      <div class="productCart hide">
-        <div class="overlay"></div>
+      <div class="row">
+        <ul class="nav-icons row">
+          <li id="cart" class="col-lg-4 col-6">
+            <a href="javaScript:void(0)"><i class="fa fa-shopping-cart">
+                <p class="notif"><span class="counter">4</span></p>
+              </i></a>
+          </li>
+          <li id="wishlist" class="col-lg-4 col-6">
+            <a href="javaScript:void(0)"><i class="fa fa-heart">
+                <p class="notif"><span class="counter">2</span></p>
+              </i></a>
+          </li>
+          <li id="login" class="col-lg-4 sp-none">
+            <a href="modal.html" data-toggle="modal" data-target="#loginModal"><i class="fa fa-user"></i></a>
+          </li>
+        </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      </div>
+      <div class="overlay hide"></div>
+      <div class="productCart hide"> 
         <div class="top">
           <button id="closeButton">
             <i class="fas fa-times-circle"></i>
