--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -157,7 +157,7 @@ a:hover {
   width: 100vw;
   height: 100vh;
   z-index: -1;
-  background: rgba(0, 0, 0, 0.24);
+  background: rgba(0, 0, 0, 43%);
 }
 
 .productCart .top {
