--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -169,7 +169,7 @@ a:hover {
   width: 100vw;
   height: 100vh;
   z-index: -1;
-  background: rgba(0, 0, 0, 43%);
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .productCart .top {
