--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -41,14 +41,14 @@
           </li>
         </ul>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
       </div>
       <div class="overlay hide"></div>
-      <div class="productCart hide"> 
+      <div id="cartWindow" class="sideProduct hide">
         <div class="top">
-          <button id="closeButton">
+          <button class="closeButton">
             <i class="fas fa-times-circle"></i>
           </button>
           <h3>Shopping Cart</h3>
@@ -56,17 +56,41 @@
         <ul id="buyItems">
           <h4 class="empty">Your shopping cart is empty</h4>
           <!-- <li class="buyItem">
-            <img src="Images/producs-images/Mobiles/galaxynote10.png">
-            <div>
-              <h5>Products Name</h5>
-              <h6>$199</h6>
+              <img src="Images/producs-images/Mobiles/galaxynote10.png">
               <div>
-                <button>-</button>
-                <span class="countOfProduct">1</span>
-                <button>+</button>
+                <h5>Products Name</h5>
+                <h6>$199</h6>
+                <div>
+                  <button>-</button>
+                  <span class="countOfProduct">1</span>
+                  <button>+</button>
+                </div>
               </div>
-            </div>
-          </li> -->
+            </li> -->
+        </ul>
+        <button class="btn checkout hidden">Check out</button>
+      </div>
+      <div id="wishWindow" class="sideProduct hide">
+        <div class="top">
+          <button class="closeButton">
+            <i class="fas fa-times-circle"></i>
+          </button>
+          <h3>Wish List</h3>
+        </div>
+        <ul id="buyItems">
+          <h4 class="empty">Your Wish List is empty</h4>
+          <!-- <li class="buyItem">
+              <img src="Images/producs-images/Mobiles/galaxynote10.png">
+              <div>
+                <h5>Products Name</h5>
+                <h6>$199</h6>
+                <div>
+                  <button>-</button>
+                  <span class="countOfProduct">1</span>
+                  <button>+</button>
+                </div>
+              </div>
+            </li> -->
         </ul>
         <button class="btn checkout hidden">Check out</button>
       </div>
