--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -49,7 +49,7 @@
       <div id="cartWindow" class="sideProduct hide">
         <div class="top">
           <button class="closeButton">
-            <i class="fas fa-times-circle"></i>
+            <i class="fas fa-times-circle closeIcon"></i>
           </button>
           <h3>Shopping Cart</h3>
         </div>
@@ -73,7 +73,7 @@
       <div id="wishWindow" class="sideProduct hide">
         <div class="top">
           <button class="closeButton">
-            <i class="fas fa-times-circle"></i>
+            <i class="fas fa-times-circle closeIcon"></i>
           </button>
           <h3>Wish List</h3>
         </div>
