--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -27,12 +27,12 @@
       <div class="row">
         <ul class="nav-icons row">
           <li id="cart" class="col-lg-4 col-6">
-            <a href="javaScript:void(0)"><i class="fa fa-shopping-cart">
+            <a class="click" href="javaScript:void(0)"><i class="fa fa-shopping-cart">
                 <p class="notif"><span class="counter">4</span></p>
               </i></a>
           </li>
           <li id="wishlist" class="col-lg-4 col-6">
-            <a href="javaScript:void(0)"><i class="fa fa-heart">
+            <a class="click" href="javaScript:void(0)"><i class="fa fa-heart">
                 <p class="notif"><span class="counter">2</span></p>
               </i></a>
           </li>
