--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -53,20 +53,8 @@
           </button>
           <h3>Shopping Cart</h3>
         </div>
-        <ul id="buyItems">
-          <h4 class="empty">Your shopping cart is empty</h4>
-          <!-- <li class="buyItem">
-              <img src="Images/producs-images/Mobiles/galaxynote10.png">
-              <div>
-                <h5>Products Name</h5>
-                <h6>$199</h6>
-                <div>
-                  <button>-</button>
-                  <span class="countOfProduct">1</span>
-                  <button>+</button>
-                </div>
-              </div>
-            </li> -->
+        <ul class="buyItems">
+          <!-- <h4 class="empty">Your shopping cart is empty</h4> -->
         </ul>
         <button class="btn checkout hidden">Check out</button>
       </div>
@@ -77,7 +65,7 @@
           </button>
           <h3>Wish List</h3>
         </div>
-        <ul id="buyItems">
+        <ul class="buyItems">
           <h4 class="empty">Your Wish List is empty</h4>
           <!-- <li class="buyItem">
               <img src="Images/producs-images/Mobiles/galaxynote10.png">
