--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -196,6 +196,7 @@ li.buyItem{
   width: 90%;
   padding: 10px 0;
   display: flex;
+  justify-content: space-around;
 }
 
 .buyItem img{
@@ -321,6 +322,10 @@ h4 {
   font-family: 'Anton', sans-serif;
   font-style: bold;
   color: white;
+}
+
+h5{
+  font-size: 1rem;
 }
 
 li {
