--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -33,7 +33,7 @@
           </li>
           <li id="wishlist" class="col-lg-4 col-6">
             <a class="click" href="javaScript:void(0)"><i class="fa fa-heart">
-                <p class="notif"><span class="counter">2</span></p>
+                <p class="notif hide"><span class="counter">2</span></p>
               </i></a>
           </li>
           <li id="login" class="col-lg-4 sp-none">
