--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -56,6 +56,10 @@
         <ul class="buyItems">
           <!-- <h4 class="empty">Your shopping cart is empty</h4> -->
         </ul>
+        <div class="total-price row">
+          <h3 class="title col-4">TOTAL</h3>
+          <p class="col-8">Rp <span class="price-value">1111</span></p>
+        </div>
         <button class="btn checkout hidden">Check out</button>
       </div>
       <div id="wishWindow" class="sideProduct hide">
@@ -80,7 +84,7 @@
               </div>
             </li> -->
         </ul>
-        <button class="btn checkout hidden">Check out</button>
+        <button type="button" class="btn btn-danger"><h3>CLEAR</h3></button>
       </div>
     </div>
   </nav>
