--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -137,6 +137,7 @@ a:hover {
   background-color: #ffffff;
   width: 300px;
   height: 500px;
+  padding-bottom: 20px;
   color: #000;
   z-index: 15;
   position: fixed;
@@ -147,15 +148,15 @@ a:hover {
   border-radius: 10px;
 }
 
-.exit{
+.exit {
   animation: exit 0.4s;
 }
 
-.fade-in{
+.fade-in {
   animation: fade-in 0.3s;
 }
 
-.fade-out{
+.fade-out {
   animation: fade-out 0.3s;
 }
 
@@ -182,7 +183,7 @@ a:hover {
   width: 100%;
 }
 
-.sideProduct h4{
+.sideProduct h4 {
   color: #000;
   font-size: 0.7em;
 }
@@ -191,7 +192,7 @@ a:hover {
 
 
 
-li.buyItem{
+li.buyItem {
   border-bottom: #aaa 1px solid;
   width: 90%;
   padding: 10px 0;
@@ -199,7 +200,7 @@ li.buyItem{
   justify-content: normal;
 }
 
-.buyItem img{
+.buyItem img {
   width: 90px;
   height: auto;
 }
@@ -221,8 +222,57 @@ li.buyItem{
   margin: 0 auto;
 }
 
+.buyItem .social {
+  margin-top: 10px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style: none;
+  text-align: center;
+}
+
+.buyItem .social li a {
+  color: #e67e22;
+  background: #fff;
+  font-size: 18px;
+  line-height: 50px;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(0, 0, 0, .1);
+  border-radius: 50%;
+  margin: 0 2px;
+  display: block;
+  transition: all .3s ease 0s;
+}
+
+.buyItem .social li a:hover {
+  background: #e67e22;
+  color: #fff;
+}
+
 .brand-black {
   color: black;
+}
+
+.total-price {
+  margin: 0;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  position: sticky;
+}
+
+.total-price .col-8{
+  font-size: 1.3rem;
+}
+
+.btn-danger{
+  width: 70%;
+}
+
+.btn-danger h3{
+  margin-bottom: 0;
+  color: #ffff !important;
+  font-size: 1.6rem !important;
 }
 
 
@@ -315,9 +365,10 @@ figcaption {
   padding-left: 0;
 }
 
-.sideProduct .caption{
+.sideProduct .caption {
   color: #000;
   margin-left: 1em;
+  width: 100%;
 }
 
 h4 {
@@ -326,7 +377,7 @@ h4 {
   color: white;
 }
 
-h5{
+h5 {
   font-size: 1rem;
 }
 
@@ -979,8 +1030,8 @@ h3.h3 {
   .cat-content {
     width: 100%;
   }
-  
-  .cat-content img{
+
+  .cat-content img {
     max-height: none;
   }
 
@@ -1262,8 +1313,8 @@ h2 {
 }
 
 .heartbeat {
-	-webkit-animation: heartbeat 1s ease-in-out infinite both;
-	        animation: heartbeat 1s ease-in-out infinite both;
+  -webkit-animation: heartbeat 1s ease-in-out infinite both;
+  animation: heartbeat 1s ease-in-out infinite both;
 }
 
 
@@ -1305,7 +1356,7 @@ h2 {
   0% {
     transform: none;
   }
-  
+
   100% {
     transform: translateX(110%);
   }
@@ -1408,72 +1459,81 @@ h2 {
  * animation heartbeat
  * ----------------------------------------
  */
- @-webkit-keyframes heartbeat {
+@-webkit-keyframes heartbeat {
   from {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
     -webkit-transform-origin: center center;
-            transform-origin: center center;
+    transform-origin: center center;
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
+
   10% {
     -webkit-transform: scale(0.91);
-            transform: scale(0.91);
+    transform: scale(0.91);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+
   17% {
     -webkit-transform: scale(0.98);
-            transform: scale(0.98);
+    transform: scale(0.98);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
+
   33% {
     -webkit-transform: scale(0.87);
-            transform: scale(0.87);
+    transform: scale(0.87);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+
   45% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
 }
+
 @keyframes heartbeat {
   from {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
     -webkit-transform-origin: center center;
-            transform-origin: center center;
+    transform-origin: center center;
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
+
   10% {
     -webkit-transform: scale(0.91);
-            transform: scale(0.91);
+    transform: scale(0.91);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+
   17% {
     -webkit-transform: scale(0.98);
-            transform: scale(0.98);
+    transform: scale(0.98);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
+
   33% {
     -webkit-transform: scale(0.87);
-            transform: scale(0.87);
+    transform: scale(0.87);
     -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+
   45% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
     -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
 }
 
