--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -84,7 +84,9 @@
               </div>
             </li> -->
         </ul>
-        <button type="button" class="btn btn-danger"><h3>CLEAR</h3></button>
+        <div class="sticky-bottom">
+          <button type="button" class="btn btn-danger"><h3>CLEAR</h3></button>
+        </div>
       </div>
     </div>
   </nav>
