--- a/Jersey-Store/css/style.css
+++ b/Jersey-Store/css/style.css
@@ -137,7 +137,6 @@ a:hover {
   background-color: #ffffff;
   width: 300px;
   height: 500px;
-  padding-bottom: 20px;
   color: #000;
   z-index: 15;
   position: fixed;
@@ -261,15 +260,15 @@ li.buyItem {
   position: sticky;
 }
 
-.total-price .col-8{
+.total-price .col-8 {
   font-size: 1.3rem;
 }
 
-.btn-danger{
+.btn-danger {
   width: 70%;
 }
 
-.btn-danger h3{
+.btn-danger h3 {
   margin-bottom: 0;
   color: #ffff !important;
   font-size: 1.6rem !important;
@@ -371,8 +370,16 @@ figcaption {
   width: 100%;
 }
 
-.buyItem h5{
+.buyItem h5 {
   font-size: 0.9rem;
+}
+
+.sticky-bottom {
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  padding: 10px 0;
+  background-color: #fff;
 }
 
 h4 {
