--- a/Jersey-Store/component/header.html
+++ b/Jersey-Store/component/header.html
@@ -56,7 +56,7 @@
         <ul class="buyItems">
           <!-- <h4 class="empty">Your shopping cart is empty</h4> -->
         </ul>
-        <div class="total-price row">
+        <div class="total-price row sticky-bottom">
           <h3 class="title col-4">TOTAL</h3>
           <p class="col-8">Rp <span class="price-value">1111</span></p>
         </div>
