--- a/style/style.css
+++ b/style/style.css
@@ -38,23 +38,23 @@ h1 {
     display: none;
 }
 
-ul.ctrl{
+ul.ctrl {
     display: none;
 }
 
-.navbar.block{
+.navbar.block {
     background-color: transparent !important;
 }
 
 
 #section1 {
-    background-image: url(/img/background_1.png);
+    background-image: url(../img/background_1.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 #section2 {
-    background-image: url(/img/bg-dark.png);
+    background-image: url(../img/bg-dark.png);
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -63,7 +63,7 @@ ul.ctrl{
 }
 
 #section4 {
-    background-image: url(/img/bg-dark.png);
+    background-image: url(../img/bg-dark.png);
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -72,13 +72,13 @@ ul.ctrl{
 
 #section5 {
     margin-top: 10em;
-    background-image: url(/img/job-bg.png);
+    background-image: url(../img/job-bg.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 #section6 .bg-lower {
-    background-image: url(/img/bg-lower.png);
+    background-image: url(../img/bg-lower.png);
     background-size: cover;
     background-repeat: no-repeat;
     color: #FFFFFF;
@@ -86,7 +86,7 @@ ul.ctrl{
 }
 
 #section3 {
-    background-image: url(/img/background_2.png);
+    background-image: url(../img/background_2.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -135,10 +135,11 @@ ul.ctrl{
     font-weight: 600;
     font-size: 18px;
     line-height: 24px;
+    position: relative;
 }
 
 .nav-link.active {
-    color: #5468E7;
+    /* color: #5468E7; */
 }
 
 .caption p {
@@ -162,7 +163,7 @@ ul.ctrl{
 }
 
 .bg-tri {
-    background-image: url(/img/bg-tri-1.png);
+    background-image: url(../img/bg-tri-1.png);
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain;
@@ -172,7 +173,7 @@ ul.ctrl{
 
 .bg-tri-2::after {
     position: absolute;
-    content: url(/img/bg-tri-2.png);
+    content: url(../img/bg-tri-2.png);
     right: 0;
     top: -2.5em;
     z-index: -1;
@@ -232,26 +233,34 @@ span.number {
     width: 80%;
 }
 
+.tab-pane {
+    display: none;
+}
+
+.tab-pane.active {
+    display: block;
+}
+
 .nav-pills button.nav-link.active::after {
-    content: url(/img/point.png);
+    content: url(../img/point.png);
     position: absolute;
     padding: 0;
     margin: 0;
-    left: 17em;
+    left: 8em;
 }
 
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #0d6efd00 !important;
+    background-color: transparent !important;
 }
 
 .nav-pills button.nav-link::before {
-    content: url(/img/line.png);
+    content: url(../img/line.png);
     position: absolute;
     padding: 0;
     margin: 0;
-    left: 4em;
+    left: 0;
     margin-top: -5px;
 }
 
@@ -271,7 +280,7 @@ span.number {
     margin-top: 5em;
 }
 
-.lower-tab-content .col-lg-5 .content{
+.lower-tab-content .col-lg-5 .content {
     background-color: #232340;
     border-radius: 50%;
     height: 19rem;
@@ -309,7 +318,7 @@ span.number {
     margin-top: -2em;
 }
 
-.dropdown{
+.dropdown {
     width: 10rem;
     background-color: #232340;
     color: white;
@@ -324,97 +333,115 @@ span.number {
 }
 
 /* CAROUSEL  */
-.mySlides {display: none}
-img {vertical-align: middle;}
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
 }
 
 /* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+    right: 0;
+    border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
-.slideshow-container .active, .dot:hover {
-  background-color: #717171;
+.dot.active,
+.dot:hover {
+    background-color: #717171;
 }
 
 /* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+.blink {
+    animation-name: blink;
+    animation-duration: 0.5s;
 }
 
-.fade:not(.show) {
+/* .fade:not(.show) {
     opacity: 1 !important;
-}
+} */
 
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+@keyframes blink {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+
+    .prev,
+    .next,
+    .text {
+        font-size: 11px
+    }
 }
 
 
@@ -511,7 +538,7 @@ img {vertical-align: middle;}
 }
 
 .ico-2::after {
-    content: url(/img/ico-2.png);
+    content: url(../img/ico-2.png);
     width: 32px;
     height: 32px;
     vertical-align: middle;
@@ -519,7 +546,7 @@ img {vertical-align: middle;}
 }
 
 .ico-6::after {
-    content: url(/img/ico-6.png);
+    content: url(../img/ico-6.png);
     width: 32px;
     height: 32px;
     vertical-align: middle;
@@ -592,11 +619,11 @@ img {vertical-align: middle;}
 }
 
 .carousel-control-prev-icon {
-    content: url(/img/left.png) !important;
+    content: url(../img/left.png) !important;
 }
 
 .carousel-control-next-icon {
-    content: url(/img/right.png) !important;
+    content: url(../img/right.png) !important;
 }
 
 .carousel {
@@ -707,7 +734,7 @@ img {vertical-align: middle;}
 }
 
 .greet::before {
-    content: url(/img/emoji.png);
+    content: url(../img/emoji.png);
     margin-right: 10px;
 }
 
@@ -777,7 +804,7 @@ footer .nav-item {
 }
 
 .fade-out {
-    animation: fade-out 2s ease-out 2s both 
+    animation: fade-out 2s ease-out 2s both
 }
 
 /* ANIMATION */
@@ -890,14 +917,14 @@ footer .nav-item {
 
 /* ANIMATION */
 
-@media only screen and (max-width: 991px){
-.navbar {
-    position: fixed;
-    background-color: #FFFFFF !important;
-    align-items: baseline;
-    width: 100vw;
-    z-index: 9999;
-}
+@media only screen and (max-width: 991px) {
+    .navbar {
+        position: fixed;
+        background-color: #FFFFFF !important;
+        align-items: baseline;
+        width: 100vw;
+        z-index: 9999;
+    }
 }
 
 
@@ -926,7 +953,7 @@ footer .nav-item {
     .icon-content {
         gap: 1.5em;
     }
-    
+
 
 
     .icon-content a {
@@ -950,7 +977,7 @@ footer .nav-item {
     }
 
     .navbar.show {
-        background-image: url(/img/nav-sp-bg.png) !important;
+        background-image: url(../img/nav-sp-bg.png) !important;
         background-size: cover;
         background-repeat: no-repeat;
         height: 100vh;
@@ -985,12 +1012,13 @@ footer .nav-item {
         line-height: 55px;
         width: 100%;
     }
-    
-    .lower-tab-content .col-lg-7, .lower-tab-content .col-lg-5{
+
+    .lower-tab-content .col-lg-7,
+    .lower-tab-content .col-lg-5 {
         margin-bottom: 5em;
     }
-    
-    .lower-tab-content .content{
+
+    .lower-tab-content .content {
         color: #FFFFFF !important;
     }
 
@@ -1068,8 +1096,8 @@ footer .nav-item {
         font-size: 2.1em;
         line-height: 40px;
     }
-    
-    #foot-select{
+
+    #foot-select {
         width: 100%;
         background-color: #0000;
         height: 48px;
@@ -1078,33 +1106,33 @@ footer .nav-item {
         padding-left: 24px;
         padding-right: 24px;
     }
-    
+
     .ico-list-sp {
         width: 100%;
     }
-    
-    .ico-list-sp li a{
+
+    .ico-list-sp li a {
         border: 1px solid #D8D8D8;
         padding: 16px;
         border-radius: 50%;
-       
+
     }
-    
-    .ico-list-sp li a:hover{
+
+    .ico-list-sp li a:hover {
         background-color: #5468E7;
     }
-    
-    .foot-sp p{
+
+    .foot-sp p {
         margin-top: 40px;
         color: #ADADAD;
         font-size: 12px;
     }
-    
+
     #section7 {
-    background-image: url(/img/bg-ft.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-y: -7em;
+        background-image: url(../img/bg-ft.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-y: -7em;
     }
 }
 
